# brave-core

./: .gitignore  BUILD.gn  DEPS  Jenkinsfile  PRESUBMIT.py  package-lock.json  package.json
android/: android_browser_tests.gni  brave_java_sources.gni
app/: brave_main_delegate_browsertest.cc  brave_settings_strings.grdp  brave_strings.grd  brave_strings_override.grd  generate_command_metadata.py  generated_resources.grd  generated_resources_override.grd  media_router_strings.grdp  os_settings_search_tag_strings.grdp  os_settings_strings.grdp  password_manager_ui_strings.grdp  settings_strings.grdp  shared_settings_strings.grdp
browser/: about_flags.cc  brave_app_controller_mac.h  brave_browser_process_impl.cc  brave_content_browser_client.cc  brave_local_state_prefs.cc  brave_profile_prefs.cc  brave_tab_helpers.cc  sources.gni
common/: brave_content_client.cc
components/: autofill_payments_strings.grdp  commerce_strings.grdp  components_brave_strings.grd  live_caption_strings.grdp  policy_strings.grdp  privacy_sandbox_strings.grdp
components/brave_vpn/browser/connection/wireguard/win/brave_vpn_wireguard_service/interactive/: BUILD.gn  DEPS  brave_vpn_tray_command_ids.h  interactive_main.cc  interactive_main.h  interactive_resource.h  resources_en.rc  status_icon.cc  status_icon.h  status_icon_menu_model.cc  status_icon_menu_model.h  status_icon_observer.h  status_icon_win.cc  status_icon_win.h  status_tray.cc  status_tray.h  status_tray_state_changer_win.cc  status_tray_state_changer_win.h  status_tray_win.cc  status_tray_win.h
components/brave_vpn/browser/connection/wireguard/win/brave_vpn_wireguard_service/interactive/resources/: BUILD.gn  resource.h
components/filecoin/rs/: Cargo.toml
patches/: base-BUILD.gn.patch  base-trace_event-builtin_categories.h.patch  build-android-gyp-proguard.py.patch  build-config-android-config.gni.patch  build-config-android-rules.gni.patch  build-config-compiler-BUILD.gn.patch  chrome-BUILD.gn.patch  chrome-VERSION.patch  chrome-android-BUILD.gn.patch  chrome-android-chrome_java_sources.gni.patch  chrome-android-chrome_public_apk_tmpl.gni.patch  chrome-browser-BUILD.gn.patch  chrome-browser-about_flags.cc.patch  chrome-browser-browser_process_impl.h.patch  chrome-browser-extensions-BUILD.gn.patch  chrome-browser-extensions-api-developer_private-extension_info_generator.cc.patch  chrome-browser-extensions-api-identity-identity_get_auth_token_function.cc.patch  chrome-browser-prefs-browser_prefs.cc.patch  chrome-browser-renderer_context_menu-render_view_context_menu.cc.patch  chrome-browser-renderer_context_menu-render_view_context_menu.h.patch  chrome-browser-resources-extensions-item_list.html.patch  chrome-browser-resources-settings-BUILD.gn.patch  chrome-browser-resources-settings-privacy_page-privacy_page.html.patch  chrome-browser-resources-settings-privacy_page-privacy_page.ts.patch  chrome-browser-resources-settings-route.ts.patch  chrome-browser-resources-settings-router.ts.patch  chrome-browser-resources-settings-settings.ts.patch  chrome-browser-themes-theme_service_factory.cc.patch  chrome-browser-ui-BUILD.gn.patch  chrome-browser-ui-browser_navigator.cc.patch  chrome-browser-ui-chrome_pages.cc.patch  chrome-browser-ui-tab_helpers.cc.patch  chrome-browser-ui-tabs-tab_style.cc.patch  chrome-browser-ui-views-bookmarks-bookmark_bubble_view.cc.patch  (+61 more)
(+222 files in other folders)
