[package]
name = "filecoin-cxx"
description = "FFI Interface to Filecoin"
version = "0.0.1"
edition = "2018"
publish = false

[dependencies]
base64 = "0.13.0"
bls-signatures = { version = "0.12", default-features = false, features = ["pairing"] }
cxx = "1.0"
fvm_shared = { git = "https://github.com/brave-experiments/ref-fvm", branch = "3.2.0_downgraded_deps", default-features = false }
libsecp256k1 = "0.7"
num_bigint_chainsafe = { package = "forest_bigint", version = "0.1.2"}
serde = { version = "^1.0.117", features = ["derive"] }
serde_json = "^1.0.59"
thiserror = "^1.0.30"
blake2b_simd = "1.0"
cid = { version="0.8.6", default-features = false}
multihash = { version="0.16.2", default-features = false, features = [ "multihash-impl", "blake2b"] }
fvm_ipld_encoding = { git = "https://github.com/brave-experiments/ref-fvm", branch = "3.2.0_downgraded_deps", default-features = false }

[lib]
name = "filecoin_cxx"
crate-type = ["rlib"]
