# Copyright (c) 2023 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

source_set("interactive_resources") {
  inputs = [ 
    "interactive_resource.h",
    "resources_en.rc",
    "tray_light.ico"
  ] 
}


source_set("interactive") {
  sources = [
    "status_icon.cc",
    "status_icon.h",
    "status_icon_observer.h",
    "status_icon_win.cc",
    "status_icon_win.h",
    "status_tray.cc",
    "status_tray.h",
    "status_tray_state_changer_win.cc",
    "status_tray_state_changer_win.h",
    "status_tray_win.cc",
    "status_tray_win.h",
    "status_icon_menu_model.cc",
    "status_icon_menu_model.h",
    "interactive_main.cc",
    "interactive_main.h",
  ]

  deps = [
    ":interactive_resources",
    "//base",
    "//ui/display",
    "//ui/gfx",
    "//ui/gfx/geometry",
    "//ui/message_center/public/cpp",
    "//ui/views",
  ]

  libs = ["Shell32.lib"]
}
