# Copyright (c) 2023 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

source_set("interactive") {
  sources = [
    "interactive_main.cc",
    "interactive_main.h",
    "status_icon.cc",
    "status_icon.h",
    "status_icon_menu_model.cc",
    "status_icon_menu_model.h",
    "status_icon_observer.h",
    "status_icon_win.cc",
    "status_icon_win.h",
    "status_tray.cc",
    "status_tray.h",
    "status_tray_state_changer_win.cc",
    "status_tray_state_changer_win.h",
    "status_tray_win.cc",
    "status_tray_win.h",
  ]

  public_deps = [ "//skia" ]

  deps = [
    "resources",
    "//base",
    "//base:i18n",
    "//third_party/abseil-cpp:absl",
    "//third_party/icu",
    "//ui/base",
    "//ui/display",
    "//ui/gfx",
    "//ui/gfx/geometry",
    "//ui/views",
  ]

  libs = [
    "Shell32.lib"
  ]
}
